--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
-# CI: compliance check, accuracy test, optioneel load test
-# Vereist repository secrets: API_KEY, GEMINI_API_KEY
+# CI: compliance check, accuracy test, load test
+# Vereist repository secrets: API_KEY, GEMINI_API_KEY, SUPABASE_URL, SUPABASE_SERVICE_ROLE_KEY, OPENAI_API_KEY
 name: CI
 
 on:
@@ -12,6 +12,9 @@ env:
   NODE_ENV: test
   API_KEY: ${{ secrets.API_KEY }}
   GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+  SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+  SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+  OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
   BASE_URL: http://localhost:3000
   API_URL: http://localhost:3000/api/v1/gatekeeper
 
