--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Start server
         env:
-          RATE_LIMIT_REQUESTS_PER_MINUTE: 5000
+          RATE_LIMIT_REQUESTS_PER_MINUTE: 10000
         run: |
           npm run start &
           echo "Waiting for server..."
@@ -69,5 +69,5 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y k6
 
-      - name: Load test (light)
-        run: k6 run scripts/load-test-light.js
+      - name: Load test (500 VUs)
+        run: k6 run scripts/load-test.js
