--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,10 @@
 SUPABASE_URL=your_supabase_url
 SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 
-# Gemini API (for compliance evaluation)
+# LLM provider: gemini (default) or mock (local testing, no API costs)
+# LLM_PROVIDER=gemini
+
+# Gemini API (for compliance evaluation; required when LLM_PROVIDER=gemini)
 GEMINI_API_KEY=your_gemini_api_key
 
 # OpenAI API (for embeddings - recommended for MVP)
