--- a/.gitignore
+++ b/.gitignore
@@ -9,14 +9,18 @@ engine-rust/target/
 # dependencies
 node_modules/
 
-# logs
+# logs and temporary output
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+test-output.log
 
-# environment variables
+# environment variables (never commit secrets)
 .env
+.env.local
+.env.*.local
 .env.production
 ip_research_agent/.env
 
