--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@astrojs/node": "^8.0.0",
+    "@astrojs/vercel": "^7.0.0",
     "@astrojs/tailwind": "^5.1.0",
     "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.39.0",
