--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "zod": "^3.22.4"
   },
   "engines": {
-    "node": ">=18"
+    "node": "20.x"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
