--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
   },
   "dependencies": {
     "@astrojs/node": "^8.0.0",
-    "@astrojs/vercel": "^7.0.0",
+    "@astrojs/react": "^4.4.2",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.0.0",
     "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.39.0",
     "astro": "^4.0.0",
     "geoip-lite": "^1.4.10",
+    "lucide-react": "^0.563.0",
     "openai": "^4.20.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "tailwindcss": "^3.4.0",
     "zod": "^3.22.4"
   },
